--- a/electricCar.html
+++ b/electricCar.html
@@ -13,7 +13,7 @@
         <div id="nav-bar" class="flex-container">
             <a href="./index.html">
                 <div id="logo">
-                    <p> Placeholder </p>
+                    <p> EcoFriend </p>
                 </div>
             </a>
             <a href="./initiatives.html">
@@ -21,17 +21,7 @@
                     <p> Initiatives </p>
                 </div>
             </a>
-            <a href="./initiatives.html">
-                <div class="nav-btn flex-child ml-auto">
-                    <p> Initiatives </p>
-                </div>
-            </a>
-            <a href="./initiatives.html">
-                <div class="nav-btn flex-child ml-auto">
-                    <p> Initiatives </p>
-                </div>
-            </a>
-            <a href="./initiatives.html">
+            <a href="./credits.html">
                 <div class="nav-btn flex-child ml-auto">
                     <p> Credits </p>
                 </div>
@@ -39,24 +29,35 @@
         </div>
     </div>
 
+    <div id="info-title">Electric Vehicles</div>
+
+    <a href="http://localhost:63342/webmaster-2024/index.html">
+        <div id="return">Back to Home</div>
+    </a>
+
     <div id="info-text">
         <div id="info-desc">
-            <h2>About ----</h2>
-            <p> </p>
+            <h2>About Electric Vehicles</h2>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; One way an individual can help the environment is by lowering their carbon emissions. Replacing your gas powered vehicle with a hybrid or fully electric vehicle can help reduce your carbon footprint. Switching to an electric vehicle also reduces the use of fossil fuels which are a dwindling resource that is nonrenewable.</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; One of the big costs for driving a car is gas. Gas prices are unpredictable and expensive, especially if you have a lengthy commute. Electric cars remove gas as a recurring cost when operating your vehicles and Hybrid cars significantly reduce the amount of gas you have to use to cover the same distance. In the long run, this will save you money because you won’t have to pay for gas everytime you are running low.</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Not only are the prices for fueling the car lower, but electric vehicles generally have more efficiency than your average gas powered vehicle, having an efficiency rating of nearly 80% percent compared to a gas car’s 12-30%, meaning that you are getting a lot more out of what you are paying for your car to be charged.</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Many critics of hybrid and electric vehicles may complain about the low mileage per charge and the lengthy recharge time of fully electric vehicles, but it is important to note that the automotive industry, especially the electric automobile industry, is rapidly changing and advancing every day and year, so we could potentially see massive improvements in electric vehicles in the near future.</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Prices of electric vehicles vary from anywhere from $27K to upwards of $100K, but your average price of a lower-end model is going to be around $48K. Along with this, you could also potentially qualify for tax credits up to $7,500 if your vehicle was purchased after the year 2023.</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; As more and more people start to purchase gas cars, emissions will skyrocket. We can prevent this by trying out electric vehicle alternatives that will, eventually, be just as good as any gasoline car. We can rid emissions from transportation together if we use hybrid or electric cars as another means of transportation.</p>
         </div>
         <div id="info-tax">
             <h2>Tax Information</h2>
-            <p> </p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Could potentially qualify for tax credits up to $7,500 <a>https://www.irs.gov/credits-deductions/credits-for-new-clean-vehicles-purchased-in-2023-or-after</a></p>
         </div>
         <div id="info-environ">
-            <h2>Environmental Effect</h2>
-            <p> </p>
+            <h2>Additional Information</h2>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Costs vary quite a bit, they could be anywhere from $27k for a low-end model (Chevrolet Bolt EV) to upwards of $100k (Tesla Model X, Rivian R1S)</p>
         </div>
     </div>
 
     <div id="footer" class="background-d flex-container">
         <div id="description">
-            <p class="white-txt">Virginia TSA State Confrence 2024</p>
+            <p class="white-txt">Virginia TSA State Conference 2024</p>
         </div>
     </div>
 </div>
