--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <p> Initiatives </p>
                     </div>
                 </a>
-                <a href="./initiatives.html">
+                <a href="./credits.html">
                     <div class="nav-btn flex-child ml-auto">
                         <p> Credits </p>
                     </div>
@@ -108,7 +108,7 @@
             </div>
         </div>
 
-        <div class="info-container flex-container background-l">
+        <div class="info-container flex-container background-l" style="margin-bottom: 5vh">
             <div class="info-block">
                 <div class="info-block-title">
                     <p>Supporting Renewable Energy Development</p>
@@ -124,7 +124,7 @@
 
         <div id="footer" class="background-d flex-container">
             <div id="description">
-                <p class="white-txt">Virginia TSA State Confrence 2024</p>
+                <p class="white-txt">Virginia TSA State Conference 2024</p>
             </div>
         </div>
     </div>
