--- a/initiatives.html
+++ b/initiatives.html
@@ -20,17 +20,7 @@
                         <p> Initiatives </p>
                     </div>
                 </a>
-                <a href="./initiatives.html">
-                    <div class="nav-btn flex-child ml-auto">
-                        <p> Initiatives </p>
-                    </div>
-                </a>
-                <a href="./initiatives.html">
-                    <div class="nav-btn flex-child ml-auto">
-                        <p> Initiatives </p>
-                    </div>
-                </a>
-                <a href="./initiatives.html">
+                <a href="./credits.html">
                     <div class="nav-btn flex-child ml-auto">
                         <p> Credits </p>
                     </div>
@@ -46,35 +36,25 @@
             <div id="row-1" class="flex-container">
                 <a href="electricCar.html" id="electric-vehicles" class="card">
                     <div class="card-title">
-                        <p>Electric Vehicles</p>
+                        <b>Electric Vehicles</b>
                     </div>
                 </a>
                 <a href="solar.html" id="solar-energy" class="card">
                     <div class="card-title">
-                        <p>Solar Energy</p>
-                    </div>
-                </a>
-                <a href="insulation.html" id="insulation" class="card">
-                    <div class="card-title">
-                        <p>Home Insulation</p>
+                        <b>Solar Energy</b>
                     </div>
                 </a>
             </div>
 
             <div id="row-2" class="flex-container">
-                <a href="conditioning.html" id="air-condiitoning" class="card">
+                <a href="insulation.html" id="insulation" class="card">
                     <div class="card-title">
-                        <p>Air Conditioning</p>
-                    </div>
-                </a>
-                <a href="houshold.html" id="household-changes" class="card">
-                    <div class="card-title">
-                        <p>Household Changes</p>
+                        <b>Home Insulation</b>
                     </div>
                 </a>
                 <a href="water.html" id="passive-water-heating" class="card">
                     <div class="card-title">
-                        <p>Passive Water Heating</p>
+                        <b>Passive Water Heating</b>
                     </div>
                 </a>
             </div>
@@ -82,7 +62,7 @@
 
         <div id="footer" class="background-d flex-container">
             <div id="description">
-                <p class="white-txt">Virginia TSA State Confrence 2024</p>
+                <p class="white-txt">Virginia TSA State Conference 2024</p>
             </div>
         </div>
     </div>
