--- a/insulation.html
+++ b/insulation.html
@@ -13,7 +13,7 @@
         <div id="nav-bar" class="flex-container">
             <a href="./index.html">
                 <div id="logo">
-                    <p> Placeholder </p>
+                    <p> EcoFriend </p>
                 </div>
             </a>
             <a href="./initiatives.html">
@@ -21,17 +21,7 @@
                     <p> Initiatives </p>
                 </div>
             </a>
-            <a href="./initiatives.html">
-                <div class="nav-btn flex-child ml-auto">
-                    <p> Initiatives </p>
-                </div>
-            </a>
-            <a href="./initiatives.html">
-                <div class="nav-btn flex-child ml-auto">
-                    <p> Initiatives </p>
-                </div>
-            </a>
-            <a href="./initiatives.html">
+            <a href="./credits.html">
                 <div class="nav-btn flex-child ml-auto">
                     <p> Credits </p>
                 </div>
@@ -39,24 +29,32 @@
         </div>
     </div>
 
+    <div id="info-title">Home Insulation and Energy Efficient Appliances</div>
+
+    <a href="http://localhost:63342/webmaster-2024/index.html">
+        <div id="return">Back to Home</div>
+    </a>
+
     <div id="info-text">
         <div id="info-desc">
-            <h2>About ----</h2>
-            <p> </p>
+            <h2>About Home Insulation and Energy Efficient Appliances</h2>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Providing better insulation for your home will lower your energy bills, and can effectively lower your carbon footprint, as it will lower your electricity consumption.</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Less energy used is more eco-friendly, and friendly towards the homeowner's wallet.</p>
         </div>
         <div id="info-tax">
             <h2>Tax Information</h2>
-            <p> </p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Certified products such as insulation, caulk, spray foam, and other insulation products qualify for a 30% tax credit up to $1,200 <a>https://www.energystar.gov/about/federal_tax_credits/insulation</a></p>
         </div>
-        <div id="info-environ">
-            <h2>Environmental Effect</h2>
-            <p> </p>
+        <div id="info-environ" style="margin-bottom: 11vh">
+            <h2>Additional Information</h2>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Energy star appliances can save from 10%-50% on electricity bills, allowing for a cheaper cost of living, and causing less impact on the ecosystem.</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Energy efficient appliances cost slightly more upfront however, they often save money over time with continued use.</p>
         </div>
     </div>
 
     <div id="footer" class="background-d flex-container">
         <div id="description">
-            <p class="white-txt">Virginia TSA State Confrence 2024</p>
+            <p class="white-txt">Virginia TSA State Conference 2024</p>
         </div>
     </div>
 </div>
