--- a/solar.html
+++ b/solar.html
@@ -13,7 +13,7 @@
         <div id="nav-bar" class="flex-container">
             <a href="./index.html">
                 <div id="logo">
-                    <p> Placeholder </p>
+                    <p> EcoFriend </p>
                 </div>
             </a>
             <a href="./initiatives.html">
@@ -21,17 +21,7 @@
                     <p> Initiatives </p>
                 </div>
             </a>
-            <a href="./initiatives.html">
-                <div class="nav-btn flex-child ml-auto">
-                    <p> Initiatives </p>
-                </div>
-            </a>
-            <a href="./initiatives.html">
-                <div class="nav-btn flex-child ml-auto">
-                    <p> Initiatives </p>
-                </div>
-            </a>
-            <a href="./initiatives.html">
+            <a href="./credits.html">
                 <div class="nav-btn flex-child ml-auto">
                     <p> Credits </p>
                 </div>
@@ -39,10 +29,36 @@
         </div>
     </div>
 
+    <div id="info-title">Solar Energy</div>
+
+    <a href="http://localhost:63342/webmaster-2024/index.html">
+        <div id="return">Back to Home</div>
+    </a>
+
+    <div id="info-text">
+        <div id="info-desc">
+            <h2>About Solar Energy</h2>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Solar panels are a great green energy option for any homeowner looking to have energy bills reduced. </p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Solar panels are a collection of photovoltaic panels that directly convert sunlight into clean electrical energy that can power our homes and businesses. Because of the fact that there is no burning of fuels involved in the process, solar panels are a completely emissions-free source of powering your house. Any additional energy that you make can be sold to the power grid for some extra money, and because of power grid independence, you can continue to use power even in the case of a grid blackout.</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Before installing rooftop solar panels, there are many factors that have to be considered before making the purchase. For starters, not every home can accommodate the panels effectively, as the roof must have little to no shade, a 15 to 40 degree angle, and the roof tiling cannot be too aged.</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Once you begin constructing your solar power system, you need to consider two important factors of the price: The cost of energy where you live and how many solar panels you need. These factors mean that while solar power is cheap in some states, it can also be quite pricey in others. For example, New Mexico, a state with lots of sunlight and sparse population density has one of the cheapest solar costs at just $10,000 dollars after federal tax credit, whereas New York has one of the most expensive costs of solar panel installation at nearly $19,000 after federal tax credit.</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Solar panels are a great passive way to reduce the cost of living while also taking precautions to protect yourself from grid blackouts, and more importantly, protecting the environment from CO2 emissions that can slowly but surely kill our planet. While the costs may be somewhat high, data shows that the costs have been steadily decreasing since 2009.</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Consideration of the addition of solar panels to one’s hope can be a monumental step in your community to a greater and greener future for our next generations.</p>
+        </div>
+        <div id="info-tax">
+            <h2>Tax Information</h2>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; As a part of the residential clean energy act, purchases of solar panels qualify for a tax credit of 30% of the retail price. While this does make solar energy much more affordable, it’s important to note that solar leases and PPAs will not allow for these tax benefits to apply to you, as you do not technically own the solar panels.</p>
+        </div>
+        <div id="info-environ">
+            <h2>Additional Information</h2>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; In terms of paying for the solar panels, you have a wide variety of options, along with the ability to pay the full cost up-front, financing options are also available in the form of solar loans, solar leases, and power purchasing agreements(PPAs). Solar loans can potentially lower up-front costs of the system, and monthly payments will be smaller than a typical electric bill. Subsidized loans with below-market interest rates are also available, which makes solar more affordable.</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Solar leases work by having consumers host a company’s solar energy systems and having the company purchase back some electricity generated at the cost of a fixed monthly payment that is determined by the estimated amount of power a system will produce. PPAs are similar, except the monthly cost is determined by how much energy is used at a set price per kilowatt-hour of energy.</p>
+        </div>
+    </div>
 
     <div id="footer" class="background-d flex-container">
         <div id="description">
-            <p class="white-txt">Virginia TSA State Confrence 2024</p>
+            <p class="white-txt">Virginia TSA State Conference 2024</p>
         </div>
     </div>
 </div>
