--- a/water.html
+++ b/water.html
@@ -13,7 +13,7 @@
         <div id="nav-bar" class="flex-container">
             <a href="./index.html">
                 <div id="logo">
-                    <p> Placeholder </p>
+                    <p> EcoFriend </p>
                 </div>
             </a>
             <a href="./initiatives.html">
@@ -21,17 +21,7 @@
                     <p> Initiatives </p>
                 </div>
             </a>
-            <a href="./initiatives.html">
-                <div class="nav-btn flex-child ml-auto">
-                    <p> Initiatives </p>
-                </div>
-            </a>
-            <a href="./initiatives.html">
-                <div class="nav-btn flex-child ml-auto">
-                    <p> Initiatives </p>
-                </div>
-            </a>
-            <a href="./initiatives.html">
+            <a href="./credits.html">
                 <div class="nav-btn flex-child ml-auto">
                     <p> Credits </p>
                 </div>
@@ -39,24 +29,31 @@
         </div>
     </div>
 
+    <div id="info-title">Passive Water Heating</div>
+
+    <a href="http://localhost:63342/webmaster-2024/index.html">
+        <div id="return">Back to Home</div>
+    </a>
+
     <div id="info-text">
         <div id="info-desc">
-            <h2>About ----</h2>
-            <p> </p>
+            <h2>About Passing Water Heating</h2>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Geothermal heat pumps utilize the constant temperature of the earth below the surface to efficiently heat and cool your home. These systems work by transferring heat between the ground and your home, providing a consistent environment year-round while reducing energy usage and impact on the environment.</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Because geothermal heat pumps utilize renewable energy from the earth these systems produce significantly fewer greenhouse gas emissions which help to reduce your carbon footprint.</p>
         </div>
         <div id="info-tax">
             <h2>Tax Information</h2>
-            <p> </p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Homeowners are eligible for up to a 30% tax credit for installing an approved Geothermal Heating System, under the Inflation Reduction Act.</p>
         </div>
-        <div id="info-environ">
-            <h2>Environmental Effect</h2>
-            <p> </p>
+        <div id="info-environ" style="margin-bottom: 9.75vh">
+            <h2>Additional Information</h2>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; These systems do have a higher than average initial installation investment ($18,000- $30,000); however, Geothermal heat pumps can reduce energy usage by 50-70% compared to conventional HVAC systems. This will save you money over time by lowering your utility bills in addition to lower maintenance costs on average.</p>
         </div>
     </div>
 
     <div id="footer" class="background-d flex-container">
         <div id="description">
-            <p class="white-txt">Virginia TSA State Confrence 2024</p>
+            <p class="white-txt">Virginia TSA State Conference 2024</p>
         </div>
     </div>
 </div>
